--- a/Romantyzm/1. Romantyzm, czyli inna nowoczesność.md
+++ b/Romantyzm/1. Romantyzm, czyli inna nowoczesność.md
@@ -1,4 +1,3 @@
-# Romantyzm, czyli inna nowoczesność
 
 ```mermaid
 gantt
@@ -17,11 +16,13 @@ gantt
 
 - 1799 - Koniec Rewolucji Francuskiej
 - 1822 - Wydanie *Ballad i Romansów* przez A. Mickiewicza
-- 1830 - Wybuch powstania styczniowego
+- 1830 - Wybuch powstania listopadowego
 - 1849 - Zakończenie Wiosny Ludów
 - 1864 - Upadek powstania styczniowego
 
-Romantyzm rozpoczął się w Anglii i Niemczech, gdzie było to stopniowe. Natomiast w Polsce i Francji było to nagłe i występowały spory pomiędzy klasykami i romantykami (na gołe klaty).
+Romantyzm rozpoczął się w Anglii i Niemczech, gdzie było to stopniowe. Natomiast w Polsce[^1] i Francji było to nagłe i występowały spory pomiędzy klasykami i romantykami (na gołe klaty).
+
+[^1]: Warto dodać że w tym momencie Polska straciła niepodległość, co skutkowało restrykcjami w publikowaniu Polskich książek (szczególnie po powstaniu listopadowym). Na przykład *Pan Tadeusz* został wydany w Paryżu, następnie był przemycany do Polski.
 
  Polski romantyzm można podzielić na 2 główne części:
 - przedpowstaniowy - Warszawa, Wilno
@@ -31,6 +32,8 @@ Romantyzm rozpoczął się w Anglii i Niemczech, gdzie było to stopniowe. Natom
 
 Romantyzm ma części wspólne z oświeceniem, ale wiele z nich odrzucił. Zapożyczył **indywidualizm**, ale odrzucił kult nauki i na jej miejsce wybrał **irracjonalizm** (wiara, instynkt, intuicja) oraz **mistycyzm** (kontakt z Bogiem bez kościoła).
 Występowała też rekonstrukcja religii pra-słowiańskich oraz ceniono **ludowość** (folklor, obyczaje itp). 
+
+### Słowniczek
 
 - indywidualizm: Osobne podejscie
 - irracjonalizm: Poznawanie przez instynkt, wiarę i intuicję
