--- a/Romantyzm/1. Romantyzm, czyli inna nowoczesność.md
+++ b/Romantyzm/1. Romantyzm, czyli inna nowoczesność.md
@@ -20,7 +20,7 @@ gantt
 - 1849 - Zakończenie Wiosny Ludów
 - 1864 - Upadek powstania styczniowego
 
-Romantyzm rozpoczął się w Anglii i Niemczech, gdzie było to stopniowe. Natomiast w Polsce[^1] i Francji było to nagłe i występowały spory pomiędzy klasykami i romantykami (na gołe klaty).
+Romantyzm rozpoczął się w Anglii i Niemczech, gdzie było to stopniowe. Natomiast w Polsce[^1] i Francji było to nagłe i występowały [[2. Poezja romantyczna wobec klasycznej|spory pomiędzy klasykami i romantykami]] (na gołe klaty).
 
 [^1]: Warto dodać że w tym momencie Polska straciła niepodległość, co skutkowało restrykcjami w publikowaniu Polskich książek (szczególnie po powstaniu listopadowym). Na przykład *Pan Tadeusz* został wydany w Paryżu, następnie był przemycany do Polski.
 
