Poprawianie czytelności Tematu 1 [1/2]

--- a/Romantyzm/1. Romantyzm, czyli inna nowoczesność.md
+++ b/Romantyzm/1. Romantyzm, czyli inna nowoczesność.md
@@ -9,11 +9,11 @@ gantt
     Europa Zachodnia (1799-1849) : 1799, 18250d
     
     section Polska
-    Pre romantyzm (? - 1822) : 1800, 8030d
+    Pre romantyzm (1795-1822) : 1795, 9855d
     Romantyzm przedpowstaniowy (1822-1830) : 1822, 2920d
     Romantyzm popowstaniowy (1830-1864) : 1830, 12410d
 ```
-
+- 1795 - III Rozbiór Polski
 - 1799 - Koniec Rewolucji Francuskiej
 - 1822 - Wydanie *Ballad i Romansów* przez A. Mickiewicza
 - 1830 - Wybuch powstania listopadowego
@@ -46,6 +46,6 @@ Występowała też rekonstrukcja religii pra-słowiańskich oraz ceniono **ludow
 ## Zdobycze romantyzmu
 
 - Rozszerzenie się kultury na szerszą publiczność (głównie teatry i muzyka)
-- Język staje się ujednolicony
+- Ujednolicenie języka pisanego (w Polsce normą języka są utwory Adama Mickiewicza)
 - Kultura i obyczaje stają się unormowane (rezygnacja ze śmiesznych ubrań i higiena staję się normą)
 - Połączenie osób przez przynależność narodową
