[CHATGPT] Poprawianie czytelności Tematu 1 [2/2]

--- a/Romantyzm/1. Romantyzm, czyli inna nowoczesność.md
+++ b/Romantyzm/1. Romantyzm, czyli inna nowoczesność.md
@@ -20,7 +20,7 @@ gantt
 - 1849 - Zakończenie Wiosny Ludów
 - 1864 - Upadek powstania styczniowego
 
-Romantyzm rozpoczął się w Anglii i Niemczech, gdzie było to stopniowe. Natomiast w Polsce[^1] i Francji było to nagłe i występowały [[2. Poezja romantyczna wobec klasycznej|spory pomiędzy klasykami i romantykami]] (na gołe klaty).
+Romantyzm rozpoczął się najpierw w Anglii i Niemczech, jako stopniowy proces. W Polsce[^1]  i Francji pojawił się nagle, powodując [[2. Poezja romantyczna wobec klasycznej|spory pomiędzy zwolennikami klasycyzmu i romantyzmu]].
 
 [^1]: Warto dodać że w tym momencie Polska straciła niepodległość, co skutkowało restrykcjami w publikowaniu Polskich książek (szczególnie po powstaniu listopadowym). Na przykład *Pan Tadeusz* został wydany w Paryżu, następnie był przemycany do Polski.
 
@@ -30,14 +30,14 @@ Romantyzm rozpoczął się w Anglii i Niemczech, gdzie było to stopniowe. Natom
 
 ## Głowne Idee Romantyzmu
 
-Romantyzm ma części wspólne z oświeceniem, ale wiele z nich odrzucił. Zapożyczył **indywidualizm**, ale odrzucił kult nauki i na jej miejsce wybrał **irracjonalizm** (wiara, instynkt, intuicja) oraz **mistycyzm** (kontakt z Bogiem bez kościoła).
+Romantyzm łączy pewne elementy z oświeceniem, ale również wiele z nich odrzuca. Zapożyczył **indywidualizm**, ale odrzucił kult nauki i na jej miejsce wybrał **irracjonalizm** (wiara, instynkt, intuicja) oraz **mistycyzm** (kontakt z Bogiem bez kościoła).
 Występowała też rekonstrukcja religii pra-słowiańskich oraz ceniono **ludowość** (folklor, obyczaje itp). 
 
 ### Słowniczek
 
 - indywidualizm: Osobne podejscie
 - irracjonalizm: Poznawanie przez instynkt, wiarę i intuicję
-- metafizyka: Doświadczenie niemożliwe przez zmysły oraz rozum
+- metafizyka: Doświadczenie poza zmysłami i rozumem
 - ludowość: Powrót do folkloru
 - historyzm: Odkrywanie historii
 - mistycyzm: Kontakt z Bogiem poza kościołem
